# openslide-bin

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.builder  Makefile  README.markdown  README.md  README.txt  TODO.txt  bintool  build.sh  meson.build  meson.options  meson_options.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: release.md
.github/find-container-digest/: action.yml
.github/maintainer/: README.md  release.md
.github/workflows/: build.yml  container-linux.yml  container-windows.yml  container.yml  direct.yml  event-issue.yml  event-pr.yml  main.yml  pr.yml  release.yml  update-check.yml  update-label.yml  windows.yml
artifacts/: get-introspect-command.py  meson.build  postprocess-binary.py  postprocess-sdist.py  write-bdist.py  write-import-library.py  write-licenses.py  write-project-versions.py  write-pyproject.py  write-wheel.py
artifacts/python/: README.md  __init__.in.py  meson.build  pyproject.in.toml
builder/: Dockerfile  package.accept_keywords
builder/linux/: Dockerfile
builder/windows/: Dockerfile  package.accept_keywords  package.use  python-exec.conf
common/: archive.py  argparse.py  dist.py  macos.py  meson.py  python.py  software.py
machines/: cross-emscripten.ini  cross-macos-arm64.ini  cross-macos-x86_64.ini  cross-win64.ini  cross-windows-x64.ini  native-linux-aarch64.ini  native-linux-x86_64.ini
meson/: cross-linux-x86_64.ini  cross-linux32.ini  cross-linux64.ini  cross-mac-arm64.ini  cross-mac-x86_64.ini  cross-mac64.ini  cross-macarm64.ini  cross-macos-arm64.ini  cross-macos-x86_64.ini  cross-win-i686.ini  cross-win-x86_64.ini  cross-win32.ini  cross-win64.ini  meson.build  meson_options.txt  native-linux-x86_64.ini  native-mac-arm64.ini  native-mac-x86_64.ini
meson/include/: setjmp.h
meson/subprojects/: cairo.wrap  gdk-pixbuf.wrap  glib.wrap  libdicom.wrap  libffi.wrap  libxml2.wrap  openslide-java.wrap  openslide.wrap  pcre2.wrap  pixman.wrap  proxy-libintl.wrap  shared-mime-info.wrap  sqlite3.wrap  ssp.wrap  winpthreads.wrap
meson/subprojects/packagecache/: CACHEDIR.TAG
meson/subprojects/packagefiles/: cairo-dwrite.patch  gdk-pixbuf-intl.patch  glib-fallback.patch  glib-libintl.patch  glib-pcre2-static.patch  glib-pcre2.patch  libssp-meson.patch  libxml2.patch  openslide-meson.patch  openslide-symbols.patch  pixman-arm.patch  winpthreads-meson.patch
subprojects/: cairo.wrap  gdk-pixbuf.wrap  glib.wrap  libdicom.wrap  libffi.wrap  libjpeg-turbo.wrap  libopenjp2.wrap  libpng.wrap  libtiff.wrap  libxml2.wrap  openslide.wrap  pcre2.wrap  pixman.wrap  proxy-libintl.wrap  sqlite3.wrap  uthash.wrap  zlib-ng.wrap  zstd.wrap
subprojects/packagecache/: CACHEDIR.TAG
subprojects/packagefiles/: gdk-pixbuf-gmodule.patch  libdicom-preallocated-error.patch  libffi-wasm-3.4.4.patch  libxml2-pthreads.patch  openslide-bdist.patch  openslide-libtiff.patch  openslide-ventana.patch  openslide-without-gregex.patch  pixman-pthread.patch  pixman-static.patch  zlib-ng-meson.patch  zstd-pthread.patch
utils/: get-version.py  test-wheel.py  write-combined-project-versions.py  write-universal-bdist.py  write-universal-wheel.py
