# useful subproject options:
# -Dopenslide:version_suffix=foo - append foo to OpenSlide version string
# -Dopenslide:werror=true        - fail OpenSlide build on warnings
# -Dopenslide-java:werror=true   - fail OpenSlide Java build on warnings

option(
  'all_subprojects',
  type : 'boolean',
  value : false,
  description : 'Enable all subprojects (for building the source tarball)',
)
