# useful subproject options:
# -Dopenslide:version_suffix=foo - append foo to OpenSlide version string
# -Dopenslide:werror=true        - fail OpenSlide build on warnings

option(
  'all_systems',
  type : 'boolean',
  value : false,
  description : 'Enable subprojects for all OSes (for building source tarball)',
)
option(
  'dev_deps',
  type : 'boolean',
  value : false,
  description : 'Enable subprojects for OpenSlide Git main',
)
option(
  'pep517',
  type : 'boolean',
  value : false,
  description : 'PEP 517 build inside meson-python',
)
